# src/main/java/com/spring/project/model/Room.java
@@ -1,0 +1,39 @@
+package com.spring.project.model;
+
+import com.spring.project.model.enumeration.Category;
+import com.spring.project.model.enumeration.Price;
+import com.spring.project.model.enumeration.RoomStatus;
+import lombok.*;
+
+import javax.persistence.*;
+import java.io.Serializable;
+
+@AllArgsConstructor
+@NoArgsConstructor
+@Getter
+@Setter
+@ToString
+@EqualsAndHashCode
+@Entity
+@Table
+public class Room implements Serializable {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.SEQUENCE)
+    private String id;
+
+    @Column(nullable = false)
+    private int number;
+
+    @Column(nullable = false)
+    @Enumerated(EnumType.STRING)
+    private Category category;
+
+    @Column(nullable = false)
+    @Enumerated(EnumType.STRING)
+    private RoomStatus status;
+
+    @Column(nullable = false)
+    @Enumerated(EnumType.STRING)
+    private Price price;
+}
