# src/main/java/com/spring/project/model/enumeration/Gender.java
@@ -1,0 +1,5 @@
+package com.spring.project.model.enumeration;
+
+public enum Gender {
+    male, female;
+}
