# src/main/java/com/spring/project/model/enumeration/StaffStatus.java
@@ -1,0 +1,5 @@
+package com.spring.project.model.enumeration;
+
+public enum StaffStatus {
+        active, inactive;
+}
